--- a/frontend/src/components/SplashPage/SignUpForm/SignUpForm.css
+++ b/frontend/src/components/SplashPage/SignUpForm/SignUpForm.css
@@ -1,10 +1,37 @@
 .sign-up-form{
     display: flex;
+    width: 100%;
+    height: 95%;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
 .signup-container{
+    margin-top: 10%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
+    height: 600px;
+    background-color: aliceblue;
+    border-radius: 7px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.signup-button{
+    margin-top: 10px;
+    width: 20%;
+    height: 40px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.back-to-login-button{
+    width: 40%;
+    margin-top: 10px;
+    margin-left: 10px;
+    height: 40px;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
