--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -12,6 +12,7 @@ button:hover {
 }
 .input-field{
     padding-left: 20px;
+    font-size: 22px;
     width: 75%;
     height: 45px;
     margin-top: 10px;
