--- a/frontend/src/components/SplashPage/LoginForm/LoginForm.css
+++ b/frontend/src/components/SplashPage/LoginForm/LoginForm.css
@@ -5,10 +5,17 @@
     align-items: center;
     width: 500px;
     height: 300px;
-    background-color: aliceblue;
+    background-color: #A9C2F4;
     border-radius: 7px;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.login-header{
+    margin-top: 20px;
+    font-family: "Righteous", cursive;
+    font-size: 22pt;
+    color: #4F5B73;
 }
 
 .splash-form{
