--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,7 @@ body{
     width: auto;
     height: 100vh;
     background-repeat: no-repeat;
+    background-position: left;
     background-size: auto;
     background-color: rgba(230,231,233,255);
     overflow-y: hidden;
