--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -15,3 +15,10 @@
     padding-top: 20px;
     padding-left: 20px;
 }
+
+.whole-page-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
