--- a/frontend/src/components/Dashboard/MaterialCard/MaterialCard.css
+++ b/frontend/src/components/Dashboard/MaterialCard/MaterialCard.css
@@ -1,13 +1,76 @@
 .material-image{
     width: 155px;
     height: 155px;
+    border-radius: 15px;
 }
 
 .material-container{
-    background-color: aqua;
+    padding: 15px;
+    border-radius: 20px;
+    background-color: #B3B4B5;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+   
 }
 
+.material-container:hover{
+    transform: translate(0px, -3px);
+}
 
+.blur{
+    transition: 500ms ease;
+    filter: blur(5px);
+    }
+    
+
+
+
+.dark{
+    color: antiquewhite;
+}
+
+.material-card{
+    display: flex;
+    flex-direction: column;
+}
+
+.border {
+    width: 145px;
+    height: 145px;
+  background: transparent;
+  border-radius: 10px;
+  transition: border 1s;
+  position: absolute;
+}
+  .border:hover {
+    border: 1px solid #fff;
+  }
+
+.low-indicator {
+    background: #EE3233;
+    border-radius: 10px;
+}
 .material-container.low{
-    background-color: palevioletred;
+    background-color: #B3B4B5;
+    border: 2px solid #EE3233;
+}
+
+.material-actions{
+    padding: 5px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    height: 150px;
+    justify-content: space-between;
+    z-index: 100;
+}
+
+.edit-delete-material{
+    display: flex;
+    justify-content: space-between;
+}
+
+.increment-decrement-material{
+    display: flex;
+    justify-content: space-between;
 }
