--- a/frontend/src/components/Dashboard/MaterialCard/MaterialCard.css
+++ b/frontend/src/components/Dashboard/MaterialCard/MaterialCard.css
@@ -2,6 +2,7 @@
     width: 155px;
     height: 155px;
     border-radius: 15px;
+    border: 1px solid white;
 }
 
 .material-container{
@@ -9,7 +10,6 @@
     border-radius: 20px;
     background-color: #B3B4B5;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-   
 }
 
 .material-container:hover{
@@ -46,13 +46,13 @@
   }
 
 .low-indicator {
-    background: #EE3233;
+    background: #FFF468;
     border-radius: 10px;
 }
-.material-container.low{
+/* .material-container.low{
     background-color: #B3B4B5;
     border: 2px solid #EE3233;
-}
+} */
 
 .material-actions{
     padding: 5px;
