--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -14,9 +14,11 @@
 .app-body{
     display: flex;
     gap: 20px;
+    height: 96%;
     flex-wrap: wrap;
     padding-top: 20px;
     padding-left: 20px;
+    overflow-y: auto;
 }
 
 .whole-page-container{
