--- a/frontend/src/components/Dashboard/MaterialCard/MaterialCard.css
+++ b/frontend/src/components/Dashboard/MaterialCard/MaterialCard.css
@@ -10,10 +10,32 @@
     border-radius: 20px;
     background-color: #B3B4B5;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    overflow-wrap: break-word;
 }
 
+
 .material-container:hover{
-    transform: translate(0px, -3px);
+    transform: translate(0px, -2px);
+}
+
+.materials-title{
+    margin-bottom: 15px;
+    margin-left: 15px;
+    font-size: 30px;
+}
+
+.chemicals-title{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    font-size: 30px;
+}
+
+.misc-title{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    font-size: 30px;
 }
 
 .blur{
@@ -46,8 +68,11 @@
   }
 
 .low-indicator {
+    margin-left: 80px;
     background: #FFF468;
     border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 /* .material-container.low{
     background-color: #B3B4B5;
@@ -73,4 +98,16 @@
 .increment-decrement-material{
     display: flex;
     justify-content: space-between;
+}
+
+.material-name{
+    font-size: 14px;
+    width: 150px;
+    overflow-wrap: break-word;
+}
+
+.material-quantity{
+    font-size: 14px;
+    width: 150px;
+    overflow-wrap: break-word;
 }
