--- a/frontend/src/components/Dashboard/MaterialForm/MaterialForm.css
+++ b/frontend/src/components/Dashboard/MaterialForm/MaterialForm.css
@@ -2,3 +2,12 @@
     width: 40px;
     height: 40px;
 }
+
+.material-form-image{
+    width: 100px;
+    height: 100px;
+}
+
+.fa-cloud-arrow-up{
+    font-size: 40px;
+}
