--- a/frontend/src/components/Dashboard/Navigation/Navigation.css
+++ b/frontend/src/components/Dashboard/Navigation/Navigation.css
@@ -1,13 +1,27 @@
 .nav-bar{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: 100%;
     height: 50px;
     background-color: #4F5B73;
     border-bottom: 2px solid #B3B4B5;
 }
 
+.fa-wind-turbine{
+    padding-top: 10px;
+    cursor: pointer;
+    padding-left: 10px;
+    font-size: 25px;
+}
+
+.title-text{
+    cursor: pointer;
+    padding-top: 10px;
+    font-size: 18px;
+}
+
 .profile-button{
+    cursor: pointer;
     width: 100px;
     border-radius: 50%;
 
