--- a/frontend/src/components/Dashboard/Chat/Chat.css
+++ b/frontend/src/components/Dashboard/Chat/Chat.css
@@ -3,8 +3,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-left: 15px;
+    padding-right: 10px;
+    padding-top: 15px;
 }
 
+.chat-container{
+    margin-bottom: 25px;
+}
 .chat-input-container{
     display: flex;
 }
@@ -21,4 +27,8 @@
 .owner{
     display: flex;
     justify-content: flex-end;
+}
+
+.chat-room-form{
+    padding: 20px;
 }
