--- a/frontend/src/components/SplashPage/LoginForm/LoginForm.css
+++ b/frontend/src/components/SplashPage/LoginForm/LoginForm.css
@@ -2,18 +2,19 @@
     margin-top: 10%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 500px;
-    height: 300px;
+    height: auto;
     background-color: #A9C2F4;
     border-radius: 7px;
     border: none;
+    align-items: center;
+    padding: 30px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .login-header{
-    margin-top: 20px;
     font-family: "Righteous", cursive;
+    justify-content: center;
     font-size: 22pt;
     color: #4F5B73;
 }
@@ -23,7 +24,6 @@
     width: 100%;
     height: 75%;
     flex-direction: column;
-    align-items: center;
 
 }
 
