--- a/frontend/src/components/SplashPage/SignUpForm/SignUpForm.css
+++ b/frontend/src/components/SplashPage/SignUpForm/SignUpForm.css
@@ -3,11 +3,11 @@
     width: 100%;
     height: 95%;
     flex-direction: column;
-    align-items: center;
 }
 
 .sign-up-header{
     margin-top: 20px;
+    padding-bottom: 10px;
     font-family: "Righteous", cursive;
     font-size: 22pt;
     color: #4F5B73;
@@ -18,12 +18,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
-    height: 600px;
+    width: 450px;
+    height: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
     background-color: #A9C2F4;
     border-radius: 7px;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.demo-button{
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 20%;
+    height: 40px;
+    border-radius: 10px;
 }
 
 .signup-button{
