--- a/frontend/src/components/Dashboard/MaterialCard/MaterialCard.css
+++ b/frontend/src/components/Dashboard/MaterialCard/MaterialCard.css
@@ -2,7 +2,7 @@
     width: 155px;
     height: 155px;
     border-radius: 15px;
-    border: 1px solid white;
+    border: 1px solid #485369;
 }
 
 .material-container{
