--- a/frontend/src/components/Dashboard/Navigation/Navigation.css
+++ b/frontend/src/components/Dashboard/Navigation/Navigation.css
@@ -28,8 +28,9 @@
 }
 
 .profile-button:hover{
-    transition: 500ms ease;
-    filter: blur(5px);
+ -webkit-box-shadow: 0px 0px 30px 0px #A9C2F4;
+-moz-box-shadow:    0px 0px 30px 0px #A9C2F4;
+box-shadow:         0px 0px 30px 0px #A9C2F4;
 }
 
 .profile-div{
