--- a/frontend/src/components/Dashboard/Chat/Chat.css
+++ b/frontend/src/components/Dashboard/Chat/Chat.css
@@ -6,6 +6,7 @@
     padding-left: 15px;
     padding-right: 10px;
     padding-top: 15px;
+    overflow-y: hidden;
 }
 
 .outer-chat-container{
@@ -36,6 +37,7 @@
 
 .chat-message-info{
     display: flex;
+    gap: 10px;
     align-items: center;
     flex-direction: row-reverse;
     justify-content: flex-end;
@@ -56,8 +58,7 @@
 }
 .chat-input-container{
     display: flex;
-    border: 1px solid red;
-    background-color: aqua;
+    background-color: #4F5B73;
     border-radius: 10px;
     margin-bottom: 10px;
     padding: 7px;
@@ -68,13 +69,15 @@
     display: flex;
     width: 100%;
     flex-direction: column;
-    background-color: aqua;
+    background-color: #e6e7e9;
+    border-radius: 10px;
 }
 .chat-message-inner-container{
     display: flex;
     justify-content: flex-start;
     overflow-wrap: break-word;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .chat-message{
@@ -145,6 +148,8 @@
 .chat-text.owner1 > p{
     overflow-wrap: anywhere;
     width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .chat-room-name{
