--- a/frontend/src/components/Dashboard/LeftMenu/LeftMenu.css
+++ b/frontend/src/components/Dashboard/LeftMenu/LeftMenu.css
@@ -52,6 +52,8 @@
 }
 
 .side-nav-overflow-control{
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     padding-right: 5px;
+    color:black;
+    text-decoration: none;
 }
