--- a/frontend/src/components/Dashboard/LeftMenu/LeftMenu.css
+++ b/frontend/src/components/Dashboard/LeftMenu/LeftMenu.css
@@ -61,3 +61,15 @@
     color:black;
     text-decoration: none;
 }
+
+.chat-nav{
+    display: flex;
+}
+
+.room-text{
+    cursor:default
+}
+
+.fa-caret-down{
+    cursor: pointer;
+}
