--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,6 +38,15 @@ body{
     height: 100%
 }
 
+a{
+    color: black;
+    text-decoration: none;
+}
+
+.fa-pen-to-square{
+    padding-left: 10px;
+}
+
 .form-label{
     padding-top: 5px;
 }
