--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -26,3 +26,10 @@ button:hover {
     display: flex;
     justify-content: center;
 }
+
+.splash-page-wrapper{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100%;
+}
