Updating some bugs

--- a/frontend/src/components/SplashPage/SignUpForm/SignUpForm.css
+++ b/frontend/src/components/SplashPage/SignUpForm/SignUpForm.css
@@ -53,3 +53,10 @@
     margin-bottom: 10px;
     border-radius: 10px;
 }
+
+@media screen and (max-height:800px) {
+    .signup-container{
+        margin: 5%;
+        overflow-y: auto;
+    }
+}
