--- a/frontend/src/components/Dashboard/LeftMenu/LeftMenu.css
+++ b/frontend/src/components/Dashboard/LeftMenu/LeftMenu.css
@@ -26,7 +26,7 @@
 
 .nav-item{
     padding-top: 7px;
-    padding-left: 15px;
+    padding-left: 17px;
 }
 
 .nav-item-person{
@@ -61,11 +61,15 @@
 }
 
 .fa-user-cowboy{
-    padding-right: 7px;
+    padding-right: 8px;
 }
 
-.jobsite-chat-nav{
+.chat-nav{
     padding-top: 6px;
+}
+
+.room-buttons{
+    padding-top: 5px;
 }
 
 .active{
