--- a/frontend/src/components/Dashboard/Chat/Chat.css
+++ b/frontend/src/components/Dashboard/Chat/Chat.css
@@ -1,5 +1,6 @@
 .whole-chat-container{
     width: 85%;
+    height: 95%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -13,8 +14,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    padding-bottom: 30px;
-    margin-bottom: 20px;
+    height: 85%;
 }
 
 .chat-room-container{
@@ -181,4 +181,22 @@
 
 .message-button{
     width: 100px;
+}
+
+@media screen and (max-height:900px) {
+    .outer-chat-container{
+        height: 80%;
+    }
+    .whole-chat-container{
+        height: 97%;
+    }
+}
+
+@media screen and (max-height:850px) {
+    .outer-chat-container{
+        height: 80%;
+    }
+    .whole-chat-container{
+        height: 94%;
+    }
 }
