--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -28,3 +28,16 @@
     width: 100%;
     height: 100%;
 }
+
+
+.form-map-container{
+    width: 400px;
+    height: 400px;
+}
+
+.leaflet-container{
+    padding: 10px;
+    width: 400px;
+    height: 400px;
+}
+
