--- a/frontend/src/components/Dashboard/SiteWeather/SiteWeather.css
+++ b/frontend/src/components/Dashboard/SiteWeather/SiteWeather.css
@@ -12,15 +12,37 @@
 .weather-data{
     display: flex;
     padding: 20px;
-    height: 30%;
+    height: 60%;
 }
 
 .weather-data > canvas{
-    display: flex;
+    display: flex !important;
     background-color: #e6e7e9;
+    height: 90% !important;
+    width: 60% !important;
     padding: 20px;
     border-radius: 15px;
     box-shadow: rgb(50 50 50 / 50%) 0px 3px 6px 0px;
     margin-bottom: 40px;
     
+}
+
+@media screen and (max-width:1300px) {
+    .weather-data > canvas{
+        display: flex !important;
+        justify-content: center !important;
+        height: 90% !important;
+        width: 80% !important;
+    }
+
+}
+
+@media screen and (max-width:1600px) {
+    .weather-data > canvas{
+        display: flex !important;
+        justify-content: center !important;
+        height: 90% !important;
+        width: 80% !important;
+    }
+
 }
