--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -29,6 +29,27 @@
     height: 100%;
 }
 
+.site-form-input-container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.team-form-input-container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.user-form-input-container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 
 .form-map-container{
     width: 400px;
@@ -36,6 +57,7 @@
 }
 
 .leaflet-container{
+    border-radius: 15px;
     padding: 10px;
     width: 400px;
     height: 400px;
