--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -37,10 +37,10 @@
 }
 
 .team-form-input-container{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .user-form-input-container{
@@ -63,3 +63,23 @@
     height: 400px;
 }
 
+.fa-people-group.display{
+    font-size: 40px;
+}
+
+.fa-person-to-door.display{
+    cursor: pointer;
+}
+
+.team-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.team-buttons{
+    display: flex;
+    justify-content: space-around;
+}
