--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -83,3 +83,31 @@
     display: flex;
     justify-content: space-around;
 }
+
+.team-container{
+    margin: 15px 15px 15px 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.team-profile-pic{
+    width: 100px;
+    height: 100px;
+}
+
+.team-info{
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.team-title{
+    font-size: 24px;
+}
+
+.member-info{
+    font-size: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
