--- a/frontend/src/components/Dashboard/MaterialForm/MaterialForm.css
+++ b/frontend/src/components/Dashboard/MaterialForm/MaterialForm.css
@@ -12,7 +12,7 @@
     font-size: 40px;
 }
 
-.form-input-container.material{
+.form-element-container.material{
     display: flex;
     flex-direction: column;
 }
