--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -53,15 +53,26 @@
 
 
 .form-map-container{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
 }
 
 .leaflet-container{
     border-radius: 15px;
     padding: 10px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
+}
+
+.site-image-container{
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.site-image-input{
+    visibility: hidden;
 }
 
 .fa-people-group.display{
