--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -53,15 +53,28 @@
 
 
 .form-map-container{
+    display: flex;
     width: 300px;
     height: 300px;
 }
 
-.leaflet-container{
+.jobsite-map.leaflet-container{
     border-radius: 15px;
     padding: 10px;
     width: 300px;
     height: 300px;
+}
+
+.hotel-map.leaflet-container{
+    border-radius: 15px;
+    padding: 10px;
+    width: 600px;
+    height: 600px;
+}
+
+.hotel-container{
+    display: flex;
+    width: 100%;
 }
 
 .site-form-image{
