--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -72,6 +72,11 @@
     height: 600px;
 }
 
+.team-form-container{
+    display: flex;
+    flex-direction: column;
+}
+
 .hotel-container{
     display: flex;
     width: 100%;
