--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -1,4 +1,4 @@
-.app-container{
+/* .app-container{
     display: flex;
     height: 100%;
 }
@@ -145,4 +145,4 @@
     font-size: 20px;
     padding-right: 10px;
     padding-left: 10px;
-}
+} */
