--- a/frontend/src/components/SplashPage/SignUpForm/SignUpForm.css
+++ b/frontend/src/components/SplashPage/SignUpForm/SignUpForm.css
@@ -1,8 +1,5 @@
 .sign-up-form{
-    display: flex;
-    width: 100%;
-    height: 95%;
-    flex-direction: column;
+    padding: 20px;
 }
 
 .user-form-input-container{
